* Fixed IE 6 not properly positioning the right aligned button strips. (ie6.css)
git-svn-id: https://devel.simplemachines.org/code/smf/trunk@7688 a96bbafc-d752-43aa-a6db-eed64a5f2cf9

--- a/Themes/default/css/ie6.css
+++ b/Themes/default/css/ie6.css
@@ -4,3 +4,8 @@
 	margin: 0;
 	padding: 0;
 }
+
+.modbuttons .buttonlist_bottom ul, .modbuttons .buttonlist ul, .floatright .buttonlist ul, .floatright .buttonlist_bottom ul, .readbuttons .buttonlist ul, .readbuttons .buttonlist_bottom ul
+{
+	float: right;
+}
